# 3DXONE

./: .gitignore  DEVELOPER.md  DISTRIBUTION.md  LICENSE  README.md  package.json  server.js  updater.json
.github/workflows/: release.yml
3dxone/: package-lock.json  package.json  tailwind.config.js  vite.config.ts
3dxone/.tauri/: key.key  key.key.pub
3dxone/src/: App.css  App.tsx  index.css
3dxone/src-tauri/: Cargo.toml  tauri.conf.json
3dxone/src-tauri/src/: lib.rs  main.rs
3dxone/src/components/: SnowBackground.tsx  WelcomePage.tsx
3dxone/src/components/ui/: avatar.tsx  badge.tsx  button.tsx  card.tsx  dialog.tsx  dropdown-menu.tsx
scripts/: update.js
